Fix code blocks wrapping at 80 characters

--- a/css/base.css
+++ b/css/base.css
@@ -13,6 +13,7 @@ pre {
 code {
     font-family: "monospace";
     color: #000;
+    font-size: 9pt;
 }
 
 html, body {
